--- a/styles/prosilver/template/event/overall_footer_after.html
+++ b/styles/prosilver/template/event/overall_footer_after.html
@@ -10,29 +10,10 @@
     var forum_id = parseInt( '{S_FORUM_ID}');
     var topic_id = parseInt('{S_TOPIC_ID}');
 </script>
-<script type="text/javascript" >
-(function ($) {
-    if (typeof ($.noty) !== 'object') {
-        $.getScript('./ext/alg/AddonForThanksForPosts/styles/prosilver/template/jquery.noty.js', function () {
-            $.getScript('./ext/alg/AddonForThanksForPosts/styles/prosilver/template/default.js');
-            $.getScript('./ext/alg/AddonForThanksForPosts/styles/prosilver/template/topRight.js');
-            $.getScript('./ext/alg/AddonForThanksForPosts/styles/prosilver/template/topCenter.js');
-        });
-    }
-    else {
-        if (typeof ($.noty.themes.defaultTheme) !== 'object') {
-            $.getScript('./ext/alg/AddonForThanksForPosts/styles/prosilver/template/default.js');
-        }
-        if (typeof ($.$.noty.layouts.topRight) !== 'object') {
-            $.getScript('./ext/alg/AddonForThanksForPosts/styles/prosilver/template/topRight.js');
-        }
-        if (typeof ($.$.noty.layouts.topCenter) !== 'object') {
-            $.getScript('./ext/alg/AddonForThanksForPosts/styles/prosilver/template/topCenter.js');
-        }
-    }
-})(jQuery);                                    // Avoid conflicts with other libraries
-
-</script>
+<!-- INCLUDEJS jquery.noty.js -->
+<!-- INCLUDEJS default.js -->
+<!-- INCLUDEJS topRight.js -->
+<!-- INCLUDEJS topCenter.js -->
 <!-- INCLUDEJS addon_for_thanks_for_posts.js -->
 <!-- ENDIF -->
 
