fix path and icon delete

--- a/styles/prosilver/template/event/overall_footer_after.html
+++ b/styles/prosilver/template/event/overall_footer_after.html
@@ -7,7 +7,8 @@
     var L_CLEAR_LIST_THANKS_CONFIRM = '{L_CLEAR_LIST_THANKS_CONFIRM}';
     var L_YES = '{L_YES}';
     var L_NO = '{L_NO}';
-    var forum_id = parseInt( '{S_FORUM_ID}');
+    var U_ADDONFORTHANKSFORPOSTS_PATH = '{U_ADDONFORTHANKSFORPOSTS_PATH}';
+    var forum_id = parseInt('{S_FORUM_ID}');
     var topic_id = parseInt('{S_TOPIC_ID}');
 </script>
 <!-- INCLUDEJS jquery.noty.js -->
