--- a/styles/prosilver/template/event/overall_footer_after.html
+++ b/styles/prosilver/template/event/overall_footer_after.html
@@ -7,6 +7,9 @@
     var L_CLEAR_LIST_THANKS_CONFIRM = '{L_CLEAR_LIST_THANKS_CONFIRM}';
     var L_YES = '{L_YES}';
     var L_NO = '{L_NO}';
+    var L_THANK_POST_SHORT = '{L_THANK_POST_SHORT}';
+    var L_REMOVE_THANKS_SHORT = '{L_REMOVE_THANKS_SHORT}';
+    var U_ADDONFORTHANKSFORPOSTS_PATH = '{U_ADDONFORTHANKSFORPOSTS_PATH}';
     var forum_id = parseInt( '{S_FORUM_ID}');
     var topic_id = parseInt('{S_TOPIC_ID}');
 </script>
