--- a/styles/prosilver/template/event/overall_footer_after.html
+++ b/styles/prosilver/template/event/overall_footer_after.html
@@ -1,12 +1,12 @@
 <!-- IF S_TOPIC_ID && S_FORUM_THANKS -->
 <script type="text/javascript" >
-    var L_CLEAR_LIST_THANKS = '{L_CLEAR_LIST_THANKS}';
-    var L_REPUT = '{L_REPUT}';
-    var L_RECEIVED = '{L_RECEIVED}';
-    var L_GIVEN = '{L_GIVEN}';
-    var L_CLEAR_LIST_THANKS_CONFIRM = '{L_CLEAR_LIST_THANKS_CONFIRM}';
-    var L_YES = '{L_YES}';
-    var L_NO = '{L_NO}';
+    var LA_CLEAR_LIST_THANKS = '{L_CLEAR_LIST_THANKS}';
+    var LA_REPUT = '{L_REPUT}';
+    var LA_RECEIVED = '{L_RECEIVED}';
+    var LA_GIVEN = '{L_GIVEN}';
+    var LA_CLEAR_LIST_THANKS_CONFIRM = '{L_CLEAR_LIST_THANKS_CONFIRM}';
+    var LA_YES = '{L_YES}';
+    var LA_NO = '{L_NO}';
     var U_ADDONFORTHANKSFORPOSTS_PATH = '{U_ADDONFORTHANKSFORPOSTS_PATH}';
     var forum_id = parseInt('{S_FORUM_ID}');
     var topic_id = parseInt('{S_TOPIC_ID}');
